# Histology-Collagen-Quantification

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.MD  apptainer.def  collagen_quant.py  env.yaml  pyproject.toml  requirements.txt  setup_windows.sh
benchmark/: .gitkeep  README.md  benchmark_czi.sh  benchmark_czi_loading.py  profile_czi.sh  profile_czi_loading.py  quick_test_czi.py  visualize_tile_pattern.py
doc/: OPTIMIZATION_QUICKSTART.md  README.md  docker.md  file-formats.md  installation.md  method.md  performance_analysis.md  performance_findings.md  quickstart.md  workflows.md
notebook/: collagen_morph_analysis.ipynb  collagen_quantification_mouse.ipynb  collagen_segmentation_large.ipynb  pyramidal_write.ipynb  segmentation_mask_to_network.ipynb  tiled_overlay.ipynb  tiled_overlay_2.ipynb  zarr_write.ipynb
python/: collagen_quant.py  decon.py  decon.sh  decon_klara.sh  mask_to_net.py  mask_to_net.sh  result_gather.py  seg.py  seg.sh  seg_klara.sh  tiled_overlay.py  tiled_overlay.sh  tiled_overlay_klara.sh  vips_path_windows.py
scripts/: bmrc_apptainer_run.sh  build_hpc_image.sh
stain_color_map/: stain_vector_map.20250731.json  stain_vector_map_sample.json
