[project]
name = "collagen_quant"
version = "0.1.0"
description = "High resolution histology slice scanning quantification with PSR + FG staining"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.10"
readme = "README.MD"
license = {text = "MIT"}

dependencies = [
    "bioio>=0.15.0",
    "bioio-czi>=0.3.0",
    "bioio-ome-tiff>=0.2.0",
    "bioio-tifffile",
    "bioio-ome-zarr>=3.0.2",
    "zarr>=3.0.0",
    "scikit-image>=0.19.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "tifffile>=2022.5.4",
    "tqdm>=4.64.0",
    "ome-types>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "jupyterlab",
    "matplotlib",
    "ipywidgets",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-options]
index-url = "https://pypi.org/simple"

[tool.pixi.dependencies]
python = ">=3.11,<3.14"
pip = "*"
libvips = "*"
gdal = ">=3.5"
rasterio = ">=1.3"
geopandas = "*"

[tool.pixi.feature.dev.dependencies]
jupyter = "*"
jupyterlab = "*"
matplotlib = "*"
ipywidgets = "*"

[tool.pixi.environments]
default = {solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}

[tool.pixi.tasks]
decon = { cmd = "bash python/decon.sh", description = "Run interactive color deconvolution workflow" }
seg = { cmd = "bash python/seg.sh", description = "Run interactive segmentation workflow" }
notebook = { cmd = "jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --allow-root", description = "Start Jupyter Lab server" }
install = { cmd = "pip install -e .", description = "Install package in editable mode" }
